--- a/bongo/apps/frontend/assets/scss/_overrides.scss
+++ b/bongo/apps/frontend/assets/scss/_overrides.scss
@@ -40,6 +40,25 @@ body {
     margin:0;
 }
 
+input[type=search],
+input[type=text] {
+    @include vendor-prefix("appearance", "none");
+    @include vendor-prefix("border-radius", "4px");
+    @include vendor-prefix("box-shadow", "none");
+    outline: none;
+    border: 1px solid $lightgray;
+
+    &:focus {
+        border: 1px solid rgba(82,168,236,.8);
+        @include vendor-prefix("box-shadow", "0 0 8px rgba(82,168,236,.6)");
+    }
+}
+
+input[type=submit] {
+    @include vendor-prefix("border-radius", 4px);
+    border: none;
+}
+
 %valign {
     position: relative;
     top: 50%;
