--- a/bongo/apps/search/templates/search/search.html
+++ b/bongo/apps/search/templates/search/search.html
@@ -2,22 +2,37 @@
 {% load class_name %}
 
 {% block content %}
-    <h2>Search</h2>
+    <form method="get" action="/search" id="search-form">
+        <div class="basic-search">
+            <label class="search-label" for="search-box">Search:</label>
+            <input id="search-box" name="q" type="search" placeholder="Search...">
+        </div>
 
-    <form method="get" action=".">
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td>&nbsp;</td>
-                <td>
-                    <input type="submit" value="Search">
-                </td>
-            </tr>
-        </table>
+        <input class="search-submit" type="submit" value="Search">
+
+        <div class="advanced-open">
+            <span class="title">Advanced Search<i class="chevron"></i></span>
+        </div>
+
+        <div class="advanced-search">
+            <span class="categories">Search the following categories:</span>
+            <div class="search-options">
+                <div class="filter-type">
+                    <input id="authors" name="models" type="checkbox" value="bongo.creator">
+                    <p><label for="authors">Authors</label></p>
+                </div>
+                <div class="filter-type">
+                    <input id="series" name="models" type="checkbox" value="bongo.series">
+                    <p><label for="series">Series</label></p>
+                </div>
+                <div class="filter-type">
+                    <input id="articles" name="models" type="checkbox" value="bongo.post">
+                    <p><label for="articles">Articles</label></p>
+                </div>
+            </div>
+        </div>
 
         {% if query %}
-            <h3>Results</h3>
-
             {% for result in page.object_list %}
                 <p>
                     {% if result.object|class_name == 'Creator' %}
@@ -38,7 +53,17 @@
                 </div>
             {% endif %}
         {% else %}
-            {# Show some example queries to run, maybe query syntax, something else? #}
         {% endif %}
     </form>
+{% endblock %}
+
+{% block nocompress %}
+<script>
+    Zepto(function($){
+        $(".advanced-open").click(function(){
+            $(".advanced-open .chevron").toggleClass("rotate");
+            $(".advanced-search").toggleClass("visible");
+        });
+    });
+</script>
 {% endblock %}
