--- a/bongo/apps/frontend/assets/scss/components/_disqus.scss
+++ b/bongo/apps/frontend/assets/scss/components/_disqus.scss
@@ -1,20 +1,8 @@
 .dsq-widget {
-    width:100%;
-    display:block;
-    border-left: 2px solid $lightergray;
-    padding:0 15px;
-    margin:10px 0;
+    @extend %rcol-widget;
 
     .dsq-widget-title {
-        font-family:$myriad-stack;
-        font-size:1.3em;
-        text-transform: uppercase;
-        padding-bottom:5px;
-        border-bottom: 2px solid $lightergray;
-
-        &:first-letter {
-            font-size:1.35em;
-        }
+        @extend %rcol-widget-header;
     }
 
     .dsq-widget-item {
