--- a/bongo/apps/frontend/assets/scss/components/_scribd.scss
+++ b/bongo/apps/frontend/assets/scss/components/_scribd.scss
@@ -1,21 +1,9 @@
 .current-issue {
-    width:100%;
-    display:block;
-    border-left: 2px solid $lightergray;
-    padding:0 15px;
-    margin:10px 0;
+    @extend %rcol-widget;
     min-height:201px;
 
     .current-issue-title {
-        font-family:$myriad-stack;
-        font-size:1.3em;
-        text-transform: uppercase;
-        padding-bottom:5px;
-        border-bottom: 2px solid $lightergray;
-
-        &:first-letter {
-            font-size:1.35em;
-        }
+        @extend %rcol-widget-header;
     }
     a {
         .issue-thumb {
