--- a/bongo/apps/frontend/templates/pages/home.html
+++ b/bongo/apps/frontend/templates/pages/home.html
@@ -60,7 +60,8 @@
             <div class="homepage-search">
                 <h2 class="search-title">Search</h2>
                 <form method="get" action="/search" id="homepage-search-form">
-                    <input type="search">
+                    <input class="search-box" type="search" name="q">
+                    <input class="search-submit" type="submit" value="Search">
                 </form>
             </div>
 
