Improving homepage and standalone search page styles

--- a/bongo/apps/frontend/assets/scss/_colors.scss
+++ b/bongo/apps/frontend/assets/scss/_colors.scss
@@ -3,11 +3,13 @@ $features:      #90b30f;
 $artsent:       #fe9b0a;
 $sports:        #f95242;
 $opinion:       #3fb0f4;
+$search:        #27AE60;
 
 $lightgray:     #b7b7b7;
 $lightergray:   #eff0f0;
 $darkgray:      #2f3540;
 $black:         #000000;
 $white:         #ffffff;
+$lightblue:     #3fb0f4;
 
 $warning:       #e74c3c;
