--- a/bongo/apps/frontend/templates/base.html
+++ b/bongo/apps/frontend/templates/base.html
@@ -47,6 +47,7 @@
                 <span class="artsent">Arts and Entertainment</span>
                 <span class="sports">Sports</span>
                 <span class="opinion">Opinion</span>
+                <a href="/search"><span class="search">Search</span></a>
             </div>
         </div>
 
