--- a/bongo/apps/frontend/assets/scss/pages/_search.scss
+++ b/bongo/apps/frontend/assets/scss/pages/_search.scss
@@ -7,8 +7,8 @@
         }
 
         #search-box {
-            width: 100%;
-            height: 60px;
+            width: calc(100% - 105px);
+            height: 50px;
             font-size: 1.5em;
             font-family:$minion-stack;
             padding: 7px;
@@ -19,14 +19,15 @@
         font-family:$myriad-stack;
         font-size: 1.4em;
         color: white;
-        height: 40px;
+        height: 50px;
         width: 90px;
-        background-color: $opinion;
+        background-color: $search;
         margin: 20px 0;
         cursor: pointer;
+        margin-left: 10px;
 
         &:hover {
-            @include vendor-prefix("box-shadow", "0 0 8px rgba(82,168,236,.6)")
+            @include box-shadow(8px, $search, 0.6);
         }
     }
 
