--- a/bongo/apps/search/templates/search/search.html
+++ b/bongo/apps/search/templates/search/search.html
@@ -42,6 +42,8 @@
                         <a href="{% url 'author' result.object.id %}">{{ result.object.name }}</a>
                     {% elif result.object|class_name == 'Series' %}
                         <a href="{% url 'series' result.object.id %}">{{ result.object.name }}</a>
+                    {% elif result.object|class_name == 'Post' %}
+                        <a href="{% url 'article' result.object.id %}">{{ result.object.title }}</a>
                     {% endif %}
                 </p>
             {% empty %}
@@ -50,9 +52,9 @@
 
             {% if page.has_previous or page.has_next %}
                 <div>
-                    {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
+                    {% if page.has_previous %}<a href="/search?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
                     |
-                    {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+                    {% if page.has_next %}<a href="/search?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
                 </div>
             {% endif %}
         {% else %}
