--- a/bongo/apps/search/templates/search/search.html
+++ b/bongo/apps/search/templates/search/search.html
@@ -47,14 +47,21 @@
                     {% endif %}
                 </p>
             {% empty %}
-                <p>No results found.</p>
+                <p class="noresults">No results found.</p>
             {% endfor %}
 
             {% if page.has_previous or page.has_next %}
                 <div>
-                    {% if page.has_previous %}<a href="/search?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-                    |
-                    {% if page.has_next %}<a href="/search?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+                    {% if page.has_previous %}
+                        <a href="/search?q={{ query }}&amp;page={{ page.previous_page_number }}">
+                            Previous
+                        </a>
+                    {% endif %}
+                    {% if page.has_next %}
+                        <a href="/search?q={{ query }}&amp;page={{ page.next_page_number }}">
+                            Next
+                        </a>
+                    {% endif %}
                 </div>
             {% endif %}
         {% else %}
