--- a/bongo/apps/frontend/templates/base.html
+++ b/bongo/apps/frontend/templates/base.html
@@ -17,9 +17,7 @@
             <link type="text/x-scss" rel="stylesheet" href="{% static 'scss/main.scss' %}">
         {% endcompress %}
         {% if debug %}
-            {% compress css %}
-                <link type="text/x-scss" rel="stylesheet" href="{% static 'scss/devfonts.scss' %}">
-            {% endcompress %}
+            <link rel="stylesheet" href="{% static 'scss/devfonts.css' %}">
         {% else %}
             <script type="text/javascript" src="https://use.typekit.com/rmt0nbm.js"></script>
             <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
