--- a/bongo/apps/frontend/assets/scss/pages/_search.scss
+++ b/bongo/apps/frontend/assets/scss/pages/_search.scss
@@ -105,9 +105,12 @@
         }
     }
 
-    .noresults {
-        font-family: $myriad-stack;
-        font-size: 1.3em;
+    .results {
+        .count, .none {
+            font-family: $myriad-stack;
+            font-size: 1.3em;
+        }
     }
+
 
 }
