Search results styled after Google's mobile search results

--- a/bongo/apps/search/templates/search/creator.html
+++ b/bongo/apps/search/templates/search/creator.html
@@ -1,5 +1,5 @@
 <a href="/author/{{creator.pk}}">
-    <div class="search-result creator">
-        {{creator.name}}
+    <div class="search-result creator {{creator.primary_section}}">
+        <span class="primary">{{creator.name}}</span>
     </div>
 </a>
