--- a/bongo/apps/search/templates/search/series.html
+++ b/bongo/apps/search/templates/search/series.html
@@ -1,5 +1,5 @@
 <a href="/series/{{series.pk}}">
-    <div class="search-result series">
-        {{series.name}}
-    <div>
-</div>
+    <div class="search-result series {{series.primary_section}}">
+        <span class="primary">{{series.name}}</span>
+    </div>
+</a>
