Will probably be removing this rq vsite later in favor of django-rq-dashboard

--- a/ansible/roles/web/templates/nginx_site_config.j2
+++ b/ansible/roles/web/templates/nginx_site_config.j2
@@ -67,13 +67,9 @@ server {
     }
 }
 
-upstream rq_dashboard {
-    server 127.0.0.1:9181 fail_timeout=0;
-}
-
 server {
     listen 80;
-    server_name  rq.bjacobel.com; #rq.{{ site_url }};
+    server_name  rq.{{ site_url }};
 
     # path for static files
     root /none;
