--- a/bongo/apps/frontend/templates/pages/article.html
+++ b/bongo/apps/frontend/templates/pages/article.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
-{% block title %}title{% endblock %}
+{% block title %}{{article.title}}{% endblock %}
 
-<p>ARTICLE!</p>
+{% block content %}
+{% endblock %}
