--- a/bongo/apps/frontend/templates/pages/author.html
+++ b/bongo/apps/frontend/templates/pages/author.html
@@ -1,6 +1,11 @@
+{% extends "base.html" %}
+{% block title %}{{author.name}}{% endblock %}
+
+{% block content %}
 <p>{{author}}</p>
 <ul>
 {% for work in author.works %}
     <li>{{work}}</li>
 {% endfor %}
 </ul>
+{% endblock %}
