--- a/bongo/apps/search/templates/search/search.html
+++ b/bongo/apps/search/templates/search/search.html
@@ -3,9 +3,7 @@
 {% load pagecounts %}
 {% load dump %}
 
-{% block title %}
-    <title>Search | The Bowdoin Orient</title>
-{% endblock %}
+{% block title %}Search | The Bowdoin Orient{% endblock %}
 
 {% block content %}
     <form method="get" action="/search" id="search-form">
