--- a/bongo/apps/frontend/assets/scss/pages/_home.scss
+++ b/bongo/apps/frontend/assets/scss/pages/_home.scss
@@ -19,7 +19,7 @@
             display:block;
             position:absolute;
             top:50%;
-            transform: translate(0, -50%);
+            transform: translate3d(0, -50%, 0);
 
             &.news      {border: 2px solid $news; color:$news}
             &.features  {border: 2px solid $features; color:$features}
