Awesomeness, logging to logz.io

--- a/ansible/roles/base/templates/lfw_start.j2
+++ b/ansible/roles/base/templates/lfw_start.j2
@@ -1,4 +1,4 @@
 #!/bin/sh
 
-exec logstash-forwarder \
-  -config /etc/logstash-forwarder.json
+exec /opt/logstash-forwarder/bin/logstash-forwarder \
+  -config /etc/logstash-forwarder.conf
