--- a/ansible/roles/base/templates/supervisor_lfw.conf.j2
+++ b/ansible/roles/base/templates/supervisor_lfw.conf.j2
@@ -4,7 +4,7 @@ command={{ virtualenv_path }}/bin/lfw_start
 autostart=true
 autorestart=true
 
-user={{ ssh_user }}
+user=root
 
 stdout_logfile={{ application_log_dir }}/lfw.log
 redirect_stderr = true
