--- a/ansible/roles/base/templates/lfw_start.j2
+++ b/ansible/roles/base/templates/lfw_start.j2
@@ -1,4 +1,5 @@
 #!/bin/sh
 
 exec /opt/logstash-forwarder/bin/logstash-forwarder \
-  -config /etc/logstash-forwarder.conf
+  -config /etc/logstash-forwarder.conf \
+  -quiet
