--- a/ansible/roles/base/templates/logstash-forwarder.conf.j2
+++ b/ansible/roles/base/templates/logstash-forwarder.conf.j2
@@ -7,12 +7,13 @@
   "files": [
     {
       "paths": [
-        "{{ virtualenv_path }}/logs/nginx_access.log",
-        "{{ virtualenv_path }}/logs/nginx_error.log",
-        "{{ virtualenv_path }}/logs/rq.log",
-        "{{ virtualenv_path }}/logs/rq_dashboard.log",
-        "{{ virtualenv_path }}/logs/gunicorn_supervisor.log",
-        "{{ virtualenv_path }}/logs/newrelic.log",
+        "{{ application_log_dir }}/nginx_access.log",
+        "{{ application_log_dir }}/nginx_error.log",
+        "{{ application_log_dir }}/rq.log",
+        "{{ application_log_dir }}/rq_dashboard.log",
+        "{{ application_log_dir }}/gunicorn_supervisor.log",
+        "{{ application_log_dir }}/newrelic.log",
+        "{{ application_log_dir }}/lfw.log",
         "/var/log/nginx/access.log",
         "/var/log/nginx/error.log",
         "/var/log/elasticsearch/elasticsearch.log",
@@ -22,7 +23,7 @@
         "/var/log/syslog"
       ],
       "fields": {
-        "token": "{{ logzio_token }}",
+        "token": "{{ logzio_token }}"
       }
     }
   ]
