Turn off -quiet mode while we debug

--- a/ansible/roles/base/templates/lfw_start.j2
+++ b/ansible/roles/base/templates/lfw_start.j2
@@ -1,5 +1,4 @@
 #!/bin/sh
 
 exec /opt/logstash-forwarder/bin/logstash-forwarder \
-  -config /etc/logstash-forwarder.conf \
-  -quiet
+  -config /etc/logstash-forwarder.conf
