Don't forget the mysql log
[ci skip]

--- a/ansible/roles/base/templates/logstash-forwarder.conf.j2
+++ b/ansible/roles/base/templates/logstash-forwarder.conf.j2
@@ -19,6 +19,7 @@
         "/var/log/elasticsearch/elasticsearch.log",
         "/var/log/fail2ban.log",
         "/var/log/postgresql/postgresql-9.3-main.log",
+        "/var/log/mysql/error.log",
         "/var/log/supervisor/supervisord.log",
         "/var/log/syslog"
       ],
