Bad config file on last merge to develop (bad brian)

--- a/ansible/roles/base/templates/logstash-forwarder.conf.j2
+++ b/ansible/roles/base/templates/logstash-forwarder.conf.j2
@@ -14,7 +14,7 @@
       ],
       "fields": {
         "token": "{{ logzio_token }}",
-        "tags": ["nginx"]
+        "type": "nginx"
       }
     },
     {
