Log sshd attempts

--- a/ansible/roles/base/templates/logstash-forwarder.conf.j2
+++ b/ansible/roles/base/templates/logstash-forwarder.conf.j2
@@ -29,7 +29,8 @@
         "/var/log/postgresql/postgresql-9.3-main.log",
         "/var/log/mysql/error.log",
         "/var/log/supervisor/supervisord.log",
-        "/var/log/syslog"
+        "/var/log/syslog",
+        "/var/log/auth.log"
       ],
       "fields": {
         "token": "{{ logzio_token }}"
