Problems with ordering and dependencies

--- a/ansible/roles/base/templates/logstash-forwarder.conf.j2
+++ b/ansible/roles/base/templates/logstash-forwarder.conf.j2
@@ -23,7 +23,7 @@
         "{{ application_log_dir }}/rq_dashboard.log",
         "{{ application_log_dir }}/gunicorn_supervisor.log",
         "{{ application_log_dir }}/newrelic.log",
-        "{{ application_log_dir }}/lfw.log",
+        "/var/log/lfw.log",
         "/var/log/elasticsearch/elasticsearch.log",
         "/var/log/fail2ban.log",
         "/var/log/postgresql/postgresql-9.3-main.log",
